# hdf52CD

./: .gitignore  README.md  play_cd_jpegs.py  pyproject.toml
hdf52cd/: __init__.py  cd_backend.py  cli.py  hdf5_convert.py  jpeg.py
rosbag2hdf5/: __init__.py  rosbag_convert.py
